[gd_scene load_steps=14 format=2]

[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu Screens/ChooseEnemy.gd" type="Script" id=2]
[ext_resource path="res://Menu Screens/Fade-in.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.258824, 0.258824, 0.258824, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.298039, 0.298039, 0.298039, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.254902, 0.254902, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.254902, 0.254902, 0.254902, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )

[node name="ChooseEnemy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Panel" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 198.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="VBoxContainer/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Choose Opponent"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opponents" type="GridContainer" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beginner" type="Button" parent="VBoxContainer/Opponents"]
margin_right = 338.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Beginner"

[node name="Good" type="Button" parent="VBoxContainer/Opponents"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Good"

[node name="Master" type="Button" parent="VBoxContainer/Opponents"]
margin_left = 684.0
margin_right = 1022.0
margin_bottom = 398.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Master"

[node name="FadeIn" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="VBoxContainer/Opponents/Beginner" to="." method="_on_Beginner_pressed"]
[connection signal="pressed" from="VBoxContainer/Opponents/Good" to="." method="_on_Good_pressed"]
[connection signal="pressed" from="VBoxContainer/Opponents/Master" to="." method="_on_Master_pressed"]
[connection signal="finished" from="FadeIn" to="." method="_on_FadeIn_finished"]
